--- a/requirements.txt
+++ b/requirements.txt
@@ -3,25 +3,36 @@ appdirs==1.4.4
 ASLPAw==2.0.0
 backcall==0.2.0
 bimlpa==0.1.2
+Brotli==1.0.9
 cdlib==0.2.0
 certifi==2020.12.5
 chardet==4.0.0
 chinese-whispers==0.7.4
+click==8.0.1
 colorama==0.4.4
 count-dict==1.1.1
 cycler==0.10.0
 Cython==0.29.14
+dash==1.20.0
+dash-bootstrap-components==0.12.2
+dash-core-components==1.16.0
+dash-html-components==1.1.3
+dash-renderer==1.9.1
+dash-table==4.11.3
 decorator==4.4.2
 demon==2.0.5
 docutils==0.17.1
 dynetx==0.2.4
 et-xmlfile==1.1.0
 eva-lcd==0.1.0
+Flask==2.0.1
+Flask-Compress==1.9.0
 future==0.18.2
 gensim==3.8.3
 idna==2.10
 ipython==7.23.1
 ipython-genutils==0.2.0
+itsdangerous==2.0.1
 jedi==0.18.0
 Jinja2==2.11.3
 joblib==1.0.1
@@ -43,6 +54,7 @@ pandas==1.2.4
 parso==0.8.2
 pickleshare==0.7.5
 Pillow==8.2.0
+plotly==4.14.3
 pooch==1.3.0
 pquality==0.0.7
 prompt-toolkit==3.0.18
@@ -51,10 +63,12 @@ Pygments==2.9.0
 PyGSP==0.5.1
 pyparsing==2.4.7
 python-dateutil==2.8.1
+python-dotenv==0.17.1
 python-louvain==0.14
 pytz==2021.1
 pyvis==0.1.9
 requests==2.25.1
+retrying==1.3.3
 scikit-learn==0.23.2
 scipy==1.6.3
 seaborn==0.11.1
@@ -66,5 +80,6 @@ threadpoolctl==2.1.0
 tqdm==4.60.0
 traitlets==5.0.5
 urllib3==1.26.4
+utm==0.7.0
 wcwidth==0.2.5
-python-dotenv~=0.17.1
+Werkzeug==2.0.1
