--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,7 @@ Flask==2.0.1
 Flask-Compress==1.9.0
 future==0.18.2
 gensim==3.8.3
+gunicorn==20.1.0
 idna==2.10
 ipython==7.23.1
 ipython-genutils==0.2.0
@@ -43,6 +44,7 @@ markov-clustering==0.0.6.dev0
 MarkupSafe==1.1.1
 matplotlib==3.4.1
 matplotlib-inline==0.1.2
+metis==0.2a5
 multivalued-dict==2.0.1
 networkx==2.5.1
 nf1==0.0.3
