--- a/requirements.txt
+++ b/requirements.txt
@@ -1,87 +1,63 @@
 amply==0.1.4
+angel-cd==1.0.2
 appdirs==1.4.4
-ASLPAw==2.0.0
-backcall==0.2.0
 bimlpa==0.1.2
-Brotli==1.0.9
-cdlib==0.2.0
-certifi==2020.12.5
-chardet==4.0.0
+boto==2.49.0
+brotlipy==0.7.0
+bz2file==0.98
+cdlib==0.2.1
+certifi==2021.5.30
 chinese-whispers==0.7.4
-click==8.0.1
-colorama==0.4.4
-count-dict==1.1.1
 cycler==0.10.0
-Cython==0.29.14
+Cython==0.29.21
 dash==1.20.0
 dash-bootstrap-components==0.12.2
+pickleshare==0.7.5
+cloudpickle==1.6.0
 dash-core-components==1.16.0
 dash-html-components==1.1.3
-dash-renderer==1.9.1
+plotly==4.14.3
 dash-table==4.11.3
-decorator==4.4.2
 demon==2.0.5
-docutils==0.17.1
 dynetx==0.2.4
 et-xmlfile==1.1.0
 eva-lcd==0.1.0
-Flask==2.0.1
-Flask-Compress==1.9.0
 future==0.18.2
-gensim==3.8.3
-gunicorn==20.1.0
-idna==2.10
-ipython==7.23.1
-ipython-genutils==0.2.0
-itsdangerous==2.0.1
-jedi==0.18.0
-Jinja2==2.11.3
-joblib==1.0.1
-jsonpickle==2.0.0
-karateclub==1.0.24
-kiwisolver==1.3.1
+gensim==4.0.1
+infomap==1.4.1
+jdcal==1.4.1
+jedi==0.17.0
+karateclub==1.1.0
+leidenalg==0.8.4
 markov-clustering==0.0.6.dev0
 MarkupSafe==1.1.1
-matplotlib==3.4.1
-matplotlib-inline==0.1.2
 metis==0.2a5
-multivalued-dict==2.0.1
-networkx==2.5.1
+mkl-fft==1.3.0
+mkl-service==2.3.0
 nf1==0.0.3
-numpy==1.20.2
+olefile==0.46
 omega-index-py3==0.3
-openpyxl==3.0.7
-packaging==20.9
-pandas==1.2.4
-parso==0.8.2
-pickleshare==0.7.5
-Pillow==8.2.0
-plotly==4.14.3
-pooch==1.3.0
 pquality==0.0.7
-prompt-toolkit==3.0.18
 PuLP==2.4
-Pygments==2.9.0
+pybind11==2.6.2
+pyclustering==0.10.1.2
+pycombo==0.1.6
 PyGSP==0.5.1
-pyparsing==2.4.7
-python-dateutil==2.8.1
 python-dotenv==0.17.1
-python-louvain==0.14
-pytz==2021.1
+python-igraph==0.9.6
+python-Levenshtein==0.12.2
+python-louvain==0.15
 pyvis==0.1.9
-requests==2.25.1
+pywin32==227
+pyzmq==20.0.0
 retrying==1.3.3
-scikit-learn==0.23.2
-scipy==1.6.3
-seaborn==0.11.1
-shuffle-graph==1.1.1
-six==1.16.0
-sklearn==0.0
-smart-open==5.0.0
-threadpoolctl==2.1.0
-tqdm==4.60.0
-traitlets==5.0.5
-urllib3==1.26.4
+scikit-learn==0.24.2
+Shapely==1.7.1
+sip==4.19.13
+smart-open==1.9.0
+texttable==1.6.3
+thresholdclustering==1.1
+tqdm==4.61.1
 utm==0.7.0
-wcwidth==0.2.5
-Werkzeug==2.0.1
+wincertstore==0.2
+wurlitzer==2.0.1
