--- a/requirements.txt
+++ b/requirements.txt
@@ -1,63 +1,124 @@
-amply==0.1.4
-angel-cd==1.0.2
-appdirs==1.4.4
-bimlpa==0.1.2
-boto==2.49.0
-brotlipy==0.7.0
-bz2file==0.98
-cdlib==0.2.1
+absl-py==0.13.0
+algopy==0.5.7
+arch==4.19
+argon2-cffi==20.1.0
+astunparse==1.6.3
+async-generator==1.10
+attrs==21.2.0
+backcall==0.2.0
+bleach==3.3.0
+Brotli==1.0.9
+cachetools==4.2.2
 certifi==2021.5.30
-chinese-whispers==0.7.4
-cycler==0.10.0
-Cython==0.29.21
-dash==1.20.0
-dash-bootstrap-components==0.12.2
-pickleshare==0.7.5
+cffi==1.14.5
+chardet==4.0.0
+chart-studio==1.1.0
+click==8.0.1
 cloudpickle==1.6.0
+colorama==0.4.4
+colorlog==5.0.1
+colormap==1.0.3
+cryptography==3.4.7
+cycler==0.10.0
+Cython==0.29.23
+dash==1.20.0
+dash-auth==1.4.1
+dash-bootstrap-components==0.12.2
 dash-core-components==1.16.0
+dash-daq==0.5.0
+dash-enterprise-auth==0.0.4
 dash-html-components==1.1.3
-plotly==4.14.3
+dash-renderer==1.9.1
 dash-table==4.11.3
-demon==2.0.5
-dynetx==0.2.4
-et-xmlfile==1.1.0
-eva-lcd==0.1.0
+decorator==5.0.9
+defusedxml==0.7.1
+easydev==0.11.1
+entrypoints==0.3
+Flask==2.0.1
+Flask-Compress==1.10.0
+Flask-SeaSurf==0.3.0
+flatbuffers==1.12
 future==0.18.2
-gensim==4.0.1
-infomap==1.4.1
-jdcal==1.4.1
-jedi==0.17.0
-karateclub==1.1.0
-leidenalg==0.8.4
-markov-clustering==0.0.6.dev0
-MarkupSafe==1.1.1
-metis==0.2a5
-mkl-fft==1.3.0
-mkl-service==2.3.0
-nf1==0.0.3
-olefile==0.46
-omega-index-py3==0.3
-pquality==0.0.7
-PuLP==2.4
-pybind11==2.6.2
-pyclustering==0.10.1.2
-pycombo==0.1.6
-PyGSP==0.5.1
-python-dotenv==0.17.1
-python-igraph==0.9.6
-python-Levenshtein==0.12.2
-python-louvain==0.15
-pyvis==0.1.9
-pywin32==227
-pyzmq==20.0.0
+gast==0.4.0
+google-auth==1.31.0
+google-auth-oauthlib==0.4.4
+google-pasta==0.2.0
+grpcio==1.34.1
+gunicorn==20.1.0
+idna==2.10
+ipykernel==5.5.5
+ipython==7.24.1
+ipython-genutils==0.2.0
+ipywidgets==7.6.3
+itsdangerous==2.0.1
+jedi==0.18.0
+Jinja2==3.0.1
+joblib==1.0.1
+jsonschema==3.2.0
+jupyter-client==6.1.12
+jupyter-core==4.7.1
+jupyterlab-pygments==0.1.2
+jupyterlab-widgets==1.0.0
+kiwisolver==1.3.1
+llvmlite==0.36.0
+lxml==4.6.3
+Markdown==3.3.4
+MarkupSafe==2.0.1
+matplotlib==3.4.2
+matplotlib-inline==0.1.2
+mistune==0.8.4
+multitasking==0.0.9
+nbclient==0.5.3
+nbconvert==6.0.7
+nbformat==5.1.3
+nest-asyncio==1.5.1
+notebook==6.4.0
+numba==0.53.1
+numdifftools==0.9.40
+numpy==1.19.5
+oauthlib==3.1.1
+opt-einsum==3.3.0
+packaging==20.9
+pandas==1.2.4
+pandocfilters==1.4.3
+parso==0.8.2
+patsy==0.5.1
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==8.2.0
+plotly==4.14.3
+prometheus-client==0.11.0
+prompt-toolkit==3.0.18
+property-cached==1.6.4
+protobuf==3.17.3
+ptyprocess==0.7.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.20
+Pygments==2.9.0
+pyOpenSSL==20.0.1
+pyparsing==2.4.7
+pyrsistent==0.17.3
+python-dateutil==2.8.1
+requests==2.25.1
+requests-oauthlib==1.3.0
 retrying==1.3.3
-scikit-learn==0.24.2
-Shapely==1.7.1
-sip==4.19.13
-smart-open==1.9.0
-texttable==1.6.3
-thresholdclustering==1.1
+rsa==4.7.2
+Send2Trash==1.5.0
+six==1.15.0
+slicer==0.0.7
+termcolor==1.1.0
+terminado==0.10.1
+testpath==0.5.0
+threadpoolctl==2.1.0
+tornado==6.1
 tqdm==4.61.1
-utm==0.7.0
-wincertstore==0.2
-wurlitzer==2.0.1
+traitlets==5.0.5
+typing-extensions==3.7.4.3
+ua-parser==0.10.0
+urllib3==1.26.5
+wcwidth==0.2.5
+webencodings==0.5.1
+Werkzeug==2.0.1
+widgetsnbextension==3.5.1
+wrapt==1.12.1
